[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/paralax3/paralaxE3_3.png" type="Texture" id=1]
[ext_resource path="res://Assets/paralax3/paralaxE3_2.png" type="Texture" id=2]
[ext_resource path="res://Assets/map/blockL3.png" type="Texture" id=3]
[ext_resource path="res://Assets/music/FinalBoss.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/paralax3/paralaxE3_1.png" type="Texture" id=5]
[ext_resource path="res://Assets/paralax3/paralaxB3.png" type="Texture" id=6]
[ext_resource path="res://world-3/finalLevel.gd" type="Script" id=7]
[ext_resource path="res://boss.tscn" type="PackedScene" id=8]
[ext_resource path="res://Hope.tscn" type="PackedScene" id=10]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=2]
0/name = "blockL3.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2647.05, 33.4249 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20.2743, 22.3996 )

[node name="finalLevel" type="Node2D"]
pause_mode = 2
position = Vector2( -5.25732, -0.381371 )
script = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
pause_mode = 1
tile_set = SubResource( 2 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( -720891, 0, 0, -720890, 0, 0, -720880, 0, 0, -720879, 0, 0, -655355, 0, 0, -655354, 0, 0, -655344, 0, 0, -655343, 0, 0, -589819, 0, 0, -589818, 0, 0, -589808, 0, 0, -589807, 0, 0, -524283, 0, 0, -524282, 0, 0, -524272, 0, 0, -524271, 0, 0, -458747, 0, 0, -458746, 0, 0, -458736, 0, 0, -458735, 0, 0, -393211, 0, 0, -393210, 0, 0, -393200, 0, 0, -393199, 0, 0, -327675, 0, 0, -327674, 0, 0, -327664, 0, 0, -327663, 0, 0, -262139, 0, 0, -262138, 0, 0, -262128, 0, 0, -262127, 0, 0, -196603, 0, 0, -196602, 0, 0, -196592, 0, 0, -196591, 0, 0, -131067, 0, 0, -131066, 0, 0, -131056, 0, 0, -131055, 0, 0, -65531, 0, 0, -65530, 0, 0, -65520, 0, 0, -65519, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0 )

[node name="Hope" parent="." instance=ExtResource( 10 )]
pause_mode = 1
position = Vector2( 483.748, -47.0162 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
pause_mode = 1
scroll_ignore_camera_zoom = true

[node name="sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0 )
motion_mirroring = Vector2( 1000, 1000 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/sky"]
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
centered = false

[node name="ele2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1.2, 0 )
motion_offset = Vector2( 0, 400 )
motion_mirroring = Vector2( 1000, 1000 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ele2"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false

[node name="ele3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1.6, 0 )
motion_offset = Vector2( 0, 300 )
motion_mirroring = Vector2( 1000, 1000 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ele3"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
centered = false

[node name="ele1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 0 )
motion_offset = Vector2( 0, 500 )
motion_mirroring = Vector2( 1000, 1000 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ele1"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
centered = false

[node name="Fallzone" type="Area2D" parent="."]
pause_mode = 1
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fallzone"]
position = Vector2( 1999.3, 1251.7 )
shape = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 1
stream = ExtResource( 4 )
volume_db = -5.0
autoplay = true

[node name="timerNext" type="Timer" parent="."]
pause_mode = 1
wait_time = 1.3

[node name="boss" parent="." instance=ExtResource( 8 )]
position = Vector2( 827.837, -133.745 )

[node name="controlPoint1" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="controlPoint1"]
position = Vector2( 479.801, -92.6963 )
shape = SubResource( 4 )

[node name="controlPoint2" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="controlPoint2"]
position = Vector2( 988.6, -93.293 )
shape = SubResource( 4 )

[connection signal="body_entered" from="Fallzone" to="." method="_on_Fallzone_body_entered"]
[connection signal="timeout" from="timerNext" to="." method="_on_timerNext_timeout"]
[connection signal="enemy_destroy" from="boss" to="." method="_on_Enemy_enemy_destroy"]
[connection signal="body_entered" from="controlPoint1" to="." method="_on_controlPoint1_body_entered"]
[connection signal="body_entered" from="controlPoint2" to="." method="_on_controlPoint2_body_entered"]
